[metadata]
name = csun-rcv
version = 0.1.0
author = Alexander Rose
description = Kinesis Video Stream integration with AWS Lambda to preform real-time object detection with multiple object tracking.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rosealexander/csun-rcv
classifiers =
  Programming Language :: Python :: 3
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
python_requires = >=3.11
install_requires =
  sort @ git+https://github.com/rosealexander/sort.git@setuptools
  rcvprocessor @ git+https://github.com/rosealexander/rcvprocessor
  aiobotocore
  opencv-python
  ffmpeg-python
